search fixed footer fixed

--- a/src/less/base/_base.less
+++ b/src/less/base/_base.less
@@ -188,3 +188,8 @@ blockquote p {
 	text-transform: uppercase;
 	.mixin-margin(bottom, @l3);
 }
+
+.test {
+	background-color: yellow;
+	height: 200px;
+}
