--- a/src/less/blocks/_section-card.less
+++ b/src/less/blocks/_section-card.less
@@ -66,14 +66,19 @@
 		font-size: 18px;}
 }
 
- .card-description--img {	
-	@media @desktop {min-height: 340px !important;}
-	@media @desktopXL {min-height: 435px !important;}
-}
+//  .card-description--img {	
+// 	@media @desktop {min-height: 340px !important;}
+// 	@media @desktopXL {min-height: 435px !important;}
+// }
 @media @desktop {
 	.card-description--img-1{min-height: 437px !important;}
 	.card-description--img-2{min-height: 333px !important;}
 	.card-description--img-3{min-height: 399px !important;}
 	}
 
+@media @desktopXL {
+	.card-description--img-1{min-height: 341px !important;}
+	.card-description--img-2{min-height: 285px !important;}
+	.card-description--img-3{min-height: 341px !important;}
+	}
 	
