--- a/src/less/blocks/_sections.less
+++ b/src/less/blocks/_sections.less
@@ -13,6 +13,7 @@
 	.mixin-margin(top;@l3);
 	
 	.title-1 {
+		margin: 0px;
 		.mixin-margin(bottom;@l2);
 		text-align: center;
 	}
@@ -21,8 +22,11 @@
 //- аксессуары
 .section-accessories {
 	.mixin-margin(top;@l2);
+	.mixin-margin(bottom;@l1);
+
 
 	.title-3 {
+		margin: 0px;
 		.mixin-margin(bottom;@l3);
 		text-align: center;
 	}
