--- a/src/less/sections/_footer-navigation.less
+++ b/src/less/sections/_footer-navigation.less
@@ -17,7 +17,7 @@
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	margin-bottom: 21px;
+	// margin-bottom: 21px;
 }
 @media @desktop {
 	.footer-navigation {
