--- a/src/pug/pages/ui/catalogue-section.pug
+++ b/src/pug/pages/ui/catalogue-section.pug
@@ -9,26 +9,24 @@ block content
 	.container.container--left.bg-color
 		.title Раздел каталога
 		.section-ui
-			.catalog-section.d-block.d-md-none.d-xl-block
-				.row
-					.col-md-6.col-xl-4
-						+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-						+card-product-img('#004AAA', 'bg/blue-purse.jpg', '286px;')
-					.col-md-6.col-xl-4
-						+card-product-img('#004AAA', 'bg/red-purse.jpg', '218px;')
-						+card-product-text('#DC1019;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-					
-					.col-md-6.col-xl-4
-						+card-product-text('#61B39B;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-						+card-product-img('#004AAA', 'bg/heart-purse.jpg', '262px;')
+			.row.d-flex.d-md-none.d-xl-flex
+				.col-md-6.col-xl-4
+					+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
+					+card-product-img('#004AAA', 'bg/blue-purse.jpg', '286px;')
+				.col-md-6.col-xl-4
+					+card-product-img('#004AAA', 'bg/red-purse.jpg', '218px;')
+					+card-product-text('#DC1019;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
+				
+				.col-md-6.col-xl-4
+					+card-product-text('#61B39B;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
+					+card-product-img('#004AAA', 'bg/heart-purse.jpg', '262px;')
 
-			.catalog-section.d-none.d-md-block.d-xl-none
-				.row
-					.col-md-6
-						+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-						+card-product-img('#004AAA', 'bg/blue-purse.jpg', '307px;')(class="card-description--img-1")
-						+card-product-text('#DC1019;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-					.col-md-6
-						+card-product-img('#004AAA', 'bg/red-purse.jpg', '234px;')(class="card-description--img-2")
-						+card-product-text('#61B39B;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-						+card-product-img('#004AAA', 'bg/heart-purse.jpg', '281px;')(class="card-description--img-3")
+			.row.d-none.d-md-flex.d-xl-none
+				.col-md-6
+					+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
+					+card-product-img('#004AAA', 'bg/blue-purse.jpg', '307px;')(class="card-description--img-1")
+					+card-product-text('#DC1019;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
+				.col-md-6
+					+card-product-img('#004AAA', 'bg/red-purse.jpg', '234px;')(class="card-description--img-2")
+					+card-product-text('#61B39B;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
+					+card-product-img('#004AAA', 'bg/heart-purse.jpg', '281px;')(class="card-description--img-3")
