--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -2,7 +2,7 @@ extends ../layouts/page-layout/page.pug
 
 block variables
 	- var title = 'Главная страница';
-	- var pageClass = 'index-page footer-bottom';
+	- var pageClass = 'index-page';
 
 block content
 	include ../sections/header-top.pug
