--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -1,2 +1,5 @@
-// Секция под шапку на сайт 
-h1 Тут будет Шапка сайта
+include header-top.pug
+include header-nav.pug
+.line-gradient
+include header-search.pug
+
