--- a/src/less/sections/_footer.less
+++ b/src/less/sections/_footer.less
@@ -17,10 +17,11 @@
 		padding-bottom: 56px;
 	}
 	@media @desktop {
-		padding-top: 25px;
+		padding-top: 0px;
 		padding-bottom: 0;
 	}
 	@media @desktopXL {
+		margin-top: -30px;
 		padding-top: 0px;
 	}
 }
