--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -25,8 +25,9 @@
 		p.strong Блоки
 		.left-panel-nav
 
-			+linkLeftPanel("Баннер красный", "#")
-			+linkLeftPanel("Баннер с картинкой", "#")
+			+linkLeftPanel("Баннеры", "banner.html")
+			//- +linkLeftPanel("Баннер красный", "#")
+			//- +linkLeftPanel("Баннер с картинкой", "#")
 			+linkLeftPanel("Кнопки", "buttons.html")
 			+linkLeftPanel("Карточки товара", "cards.html")
 			+linkLeftPanel("Карточка раздела", "section-card.html")
