--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -12,9 +12,22 @@ block content
 	
 	//- секция банер 1
 	.section-banner-1
-	
+		.container
+			picture
+				source(srcset='../img/banners/banner_desktopxl_red.png 1392w', media='(min-width: 1440px)')
+				source(srcset='../img/banners/banner_desktop_red.png 1064w', media='(min-width: 1152px)')
+				source(srcset='../img/banners/banner_tablet_red.png 752w', media='(min-width: 784px)')
+				source(srcset='../img/banners/banner_mobile_red.png 344w', media='(min-width: 360px)')
+				img(src='../img/banners/banner_mobile_red.png')
 	//- секция банер 2
 	.section-banner-2
+		.container
+			picture
+				source(srcset='../img/banners/banner-desktopxl-blue.png 1392w', media='(min-width: 1440px)')
+				source(srcset='../img/banners/banner-desktop-blue.png 1064w', media='(min-width: 1152px)')
+				source(srcset='../img/banners/banner-tablet-blue.png 752w', media='(min-width: 784px)')
+				source(srcset='../img/banners/banner-mobile-blue.png 344w', media='(min-width: 360px)')
+				img(src='../img/banners/banner-mobile-blue.png')
 	
 	//- хиты продаж
 	.section-top-sales
