Path fix fot some icons in header

--- a/src/pug/sections/header-nav.pug
+++ b/src/pug/sections/header-nav.pug
@@ -74,4 +74,4 @@
 		.search-block
 			.search-block__title.toggle-search-block ПОИСК
 			.search-block__icon.toggle-search-block 
-				img(src="../../img/icons/search.svg" alt="иконка")
+				img(src="../img/icons/search.svg" alt="иконка")
