--- a/src/pug/pages/ui/footer-subscribe.pug
+++ b/src/pug/pages/ui/footer-subscribe.pug
@@ -22,9 +22,7 @@ block content
 								+button-he("Он", "#")
 						label.footer-subscribe--checkbox-label
 							span.footer-subscribe--checkbox-label-focus Email
-							input.footer-subscribe--checkbox(type="checkbox")
-							span.footer-subscribe--checkbox-custom
-							p.footer-subscribe--checkbox-label-text Я принимаю политику конфиденциальности.
+							+checkbox('Я принимаю политику конфиденциальности.')
 		.section-ui
 			pre.
 				include ../../sections/_footer-subscribe.pug
