add new media points

--- a/src/pug/pages/ui/catalogue-section.pug
+++ b/src/pug/pages/ui/catalogue-section.pug
@@ -12,14 +12,14 @@ block content
 			.row.d-flex.d-md-none.d-xl-flex
 				.col-md-6.col-xl-4
 					+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-					+card-product-img('#004AAA', 'bg/blue-purse.jpg', '286px;')
+					+card-product-img('#004AAA', 'bg/blue-purse.jpg', '286px;')(class="card-description--img-1")
 				.col-md-6.col-xl-4
-					+card-product-img('#004AAA', 'bg/red-purse.jpg', '218px;')
+					+card-product-img('#004AAA', 'bg/red-purse.jpg', '218px;')(class="card-description--img-2")
 					+card-product-text('#DC1019;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
 				
 				.col-md-6.col-xl-4
 					+card-product-text('#61B39B;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-					+card-product-img('#004AAA', 'bg/heart-purse.jpg', '262px;')
+					+card-product-img('#004AAA', 'bg/heart-purse.jpg', '262px;')(class="card-description--img-3")
 
 			.row.d-none.d-md-flex.d-xl-none
 				.col-md-6
