--- a/src/pug/mixins/_mixins.pug
+++ b/src/pug/mixins/_mixins.pug
@@ -38,4 +38,4 @@ mixin checkboxSmall (text)
 	label.checkbox-label
 		input.checkbox(type="checkbox")
 		span.checkbox-custom.checkbox-custom--small
-		p.checkbox-label-text= text
+		p.checkbox-label-text.checkbox-label-text--small= text
