--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -32,6 +32,7 @@
 			+linkLeftPanel("Карточки товара", "cards.html")
 			+linkLeftPanel("Карточка раздела", "section-card.html")
 			+linkLeftPanel("Социальные сети", "ui-social.html")
+			+linkLeftPanel("Каталог пагинация", "catalogue-pagination.html")
 
 
 	.left-panel__section
