--- a/src/pug/pages/ui/filter.pug
+++ b/src/pug/pages/ui/filter.pug
@@ -8,19 +8,23 @@ block content
 	.container.container--left
 		.title Фильтр
 		
-		form.form-filter
+		form.form-filter(style="border:1px dashed lightgrey;")
 			.filter-header
 				.filter__title ФИЛЬТРЫ
 				.filter__clean-button Очистить
-			.line-gradient
+				.filter__close-icon#filter__close-icon
+					+icon-close
+			.line-gradient.d-none.d-lg-block
 			ul.filter-menu-l1
 				li ПО ПОЛУ
+					.filter-icon-close
 					ul.filter-menu-l2
 						li
 							+filter-item('gerder1','Женщинам')
 						li
 							+filter-item('gender2','Мужчинам')
 				li ПО КАТЕГОРИЯМ
+					.filter-icon-close
 					ul.filter-menu-l2
 						li
 							+filter-item('category1','Кошельки')
@@ -31,6 +35,7 @@ block content
 						li
 							+filter-item('category4','Офис и Тревел')
 				li ПО РАЗМЕРУ
+					.filter-icon-close
 					ul.filter-menu-l2
 						li
 							+filter-item('size1','Большой')
@@ -39,12 +44,24 @@ block content
 						li
 							+filter-item('size3','Средний')
 				li ПО ЦВЕТУ
+					.filter-icon-close
 					ul.filter-menu-l2
 						li
-							+filter-item('gerder','Цвет1')
-						li
-							+filter-item('gender','Цвет2')
+							+filter-color-checkbox('#FF7979')
+							+filter-color-checkbox('#6BAC89')
+							+filter-color-checkbox('#C3499E')
+							+filter-color-checkbox('#FFB047')
+							+filter-color-checkbox('#002D76')
+							+filter-color-checkbox('#AF674F')
+							+filter-color-checkbox('#FF7979')
+							+filter-color-checkbox('#6BAC89')
+							+filter-color-checkbox('#C3499E')
+							+filter-color-checkbox('#FFB047')
+							+filter-color-checkbox('#FF7979')
+							+filter-color-checkbox('#6BAC89')
+							
 				li ПО ЦЕНЕ
+					.filter-icon-close
 					ul.filter-menu-l2
 						li
 							+filter-item('price1','До 2 000р.')
