--- a/src/less/blocks/_filter.less
+++ b/src/less/blocks/_filter.less
@@ -1,10 +1,13 @@
 // Форма
 .form-filter {
-	width: 270px;
-	border:1px dashed lightgrey;
+	width: 360px;
 	color:@textMenu;
 	line-height: 1;
 	text-align: center;
+
+	@media @desktop {
+		width: 270px;
+	}	
 
 	ul {
 		list-style: none;
@@ -18,10 +21,16 @@
 
 // Заголовок формы
 .filter-header {
-	display: flex;
+	display: block;
 	align-items: center;
 	justify-content: space-between;
 	padding:12px 0;
+	position:relative;
+	border-bottom:1px solid @borderMenu;
+
+	@media @desktop {
+		display: flex;
+	}
 }
 
 .filter__title {
@@ -30,23 +39,59 @@
 }
 
 .filter__clean-button {
+	display: none;
 	font-size: 16px;
-	color:@textMenu;	
+	color:@textMenu;
+
+	@media @desktop {
+		display: block;
+	}	
+}
+
+// Иконка крестик
+.filter__close-icon {
+	display: block;
+	cursor: pointer;
+	position:absolute;
+	right:16px;
+	top:50%;
+	transform:translateY(-50%);
+
+	
+	@media @desktop {
+		display: none;
+	}	
 }
 
 
 // Меню 1 уровня
 .filter-menu-l1 {
 	margin:0;
-	padding:0 8px;
+	padding:0 0;
 	text-transform: uppercase;
 	text-align: left;
-	li {
-		padding-top: 16px;
+	> li {
+		position: relative;
+		padding: 12px 16px;
+		cursor: pointer;
+		border-bottom:1px solid @borderMenu;
 
 		// отступ от кнопки
+		&:last-child {
+			margin-bottom: 94px;
+		}
+
+		@media @desktop {
+			padding: 16px 8px 0px 8px;
+			border:none;
+
+			&:last-child {
+				margin-bottom: 22px;
+			}			
+		}
+
+		// Убрать border у послденего
 		&:last-child .filter-menu-l2{
-			margin-bottom: 22px;
 			border-bottom:none;
 		}
 	}
@@ -54,16 +99,21 @@
 
 // Меню 2 уровня
 .filter-menu-l2 {
+	display: none;
 	margin:0;
 	padding:0;
 	text-transform: none;
-
+	// border-bottom:none;
 	color:@borderMenu;
-	border-bottom:1px solid @borderMenu;
 	padding: 8px 0;
 	
-	li {
+	> li {
 		padding: 8px 0;
+	}
+
+	@media @desktop {
+		display: block;
+		border-bottom:1px solid @borderMenu;
 	}
 }
 
@@ -81,5 +131,74 @@
 	input[type='reset'] {
 		display: none;
 	}
+}
+
+// Чекбоксы цвета - label обертка для чекбокса и псевдо чекбоска
+.label-color-checkbox {
+	font-size: 0px;
+	margin-right: 8px;
+	margin-bottom: 0px;
+
+	&:last-child {
+		margin-right: 0;
+	}
+
+	input {
+		display: none;
+	}
+}
+
+// Псевдо чекбокс
+.filter-color-checkbox {
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	border-radius: 50%;
+	cursor: pointer;
+	transition: all 0.2s;
+
+	&:hover {
+		transform:scale(1.1);
+	}
+	
+}
+
+// Жобавляем рамку при выборе
+.label-color-checkbox input:checked + .filter-color-checkbox {
+	box-shadow: 0 0 0 1px @white,
+				0 0 0 3px @color-11;
+}
+
+// Иконка крестик
+.filter-icon-close {
+	&:before {
+		content: "+";
+		position: absolute;
+		right: 14px;
+		top:7px;
+		color: @textMenu;
+		font-size: 28px;
+	}
+	&:after {
+		content: "";
+		position: absolute;
+		right: 15px;
+		top:20px;
+		height: 2px;
+		width: 15px;
+		background-color: transparent;
+	}
+
+	@media @desktop {
+		display: none;
+	}
+}
+
+// класс для открытия/закрытия иконки
+.is-opened.filter-icon-close:before {
+	content:'';
+}
+.is-opened.filter-icon-close:after {
+	background-color: @textMenu;
 }
 
