--- a/src/pug/layouts/_mixins-links.pug
+++ b/src/pug/layouts/_mixins-links.pug
@@ -6,5 +6,6 @@ include ../mixins/_colors.pug
 include ../mixins/_section-card.pug
 include ../mixins/_social.pug
 include ../mixins/_filter-menu.pug
+include ../mixins/_svg.pug
 
 
