--- a/src/pug/mixins/_filter-menu.pug
+++ b/src/pug/mixins/_filter-menu.pug
@@ -1,3 +1,8 @@
 mixin  filter-item (id, text)
 	input.filter-checkbox(type='checkbox', id = id)
 	label.filter-label(for = id) #{text}
+
+mixin  filter-color-checkbox (color)
+	label.label-color-checkbox
+		input(type='checkbox')
+		.filter-color-checkbox(Style="background-color: " + color)
