delete hover for span

--- a/src/less/blocks/_catalogue-pagination.less
+++ b/src/less/blocks/_catalogue-pagination.less
@@ -48,8 +48,9 @@
 
 .paginator__span{ 
   line-height: 50px;
-  border:none; 
+  border:none;   
 }
+
 .page-toggle__item:hover{
   color: @active-checkbox;;
   background-color: @color-line;
@@ -60,6 +61,7 @@
   opacity: 0.4;
   cursor: default;
 }
+.paginator__span:hover,
 .page-toggle__item.disabled:hover{ background-color: transparent;}
 
 .paginator .button-more{
