--- a/src/less/sections/_header-top.less
+++ b/src/less/sections/_header-top.less
@@ -39,6 +39,7 @@
 	
 	.logo {
 		position:absolute;
+		z-index:1000;
 		background-image: url(../../img/logo/logo-mobile.svg);
 		background-size: cover;
 		background-repeat: no-repeat;
