--- a/src/pug/pages/ui/header-top.pug
+++ b/src/pug/pages/ui/header-top.pug
@@ -27,7 +27,7 @@ block content
 
 			.header-menu
 				.container
-					.logo
+					a(href="#").logo
 					.row
 						.col-6.d-flex.d-lg-none
 							.menu-block#toggle-menu
