--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -55,6 +55,8 @@
 }
 
 .card-product__text {
+	padding-left: 6px;
+	padding-right: 6px;
 	color: @text-card;		
 	min-height: 64px;
 	margin-bottom: 8px;
@@ -63,15 +65,17 @@
 	text-decoration: none;
 	transition: color 0.5s;
 	@media @tablet {
-		
+		padding-left: 10px;
+	padding-right: 10px;
 		margin-bottom: 16px;
 		min-height: 75px;
 	}
 
 	@media @desktop {
+		padding-left: 16px;
+		padding-right: 16px;
 		font-size: 16px;
-		line-height: 18px;
-		min-height: 55px;				
+		line-height: 18px;					
 	}
 
 	@media @desktopXL {
@@ -83,7 +87,7 @@
 }
 .card-product__text:hover {
 	text-decoration: none;
-	color: lighten(@text-card, 25%);
+	color:@text-red ;
 	}
 .card-product__price{
 	color:@text-card;
@@ -114,8 +118,7 @@
 .card__price--sale{
 	width: 140px;	
 	display: flex;
-	justify-content: space-around;
-	align-items: center;
+	justify-content: space-around;	
 	@media @desktop {
 		width: 160px;		
 	}
@@ -134,7 +137,7 @@
 	height: 1px;
 	background-color: #000;
 	position: absolute;
-	top: 42%;
+	top: 45%;
 	left: -9%;
 }
 
