add modificator --disabled

--- a/src/less/blocks/_catalogue-pagination.less
+++ b/src/less/blocks/_catalogue-pagination.less
@@ -57,16 +57,15 @@
   text-decoration: none;
 }  
 .page-toggle__item--current { font-weight: 700;}
-.page-toggle__item.disabled {
+.page-toggle__item--disabled {
   opacity: 0.4;
   cursor: default;
 }
 .paginator__span:hover,
-.page-toggle__item.disabled:hover{ background-color: transparent;}
+.page-toggle__item--disabled:hover{ background-color: transparent;}
 
 .paginator .button-more{
   width: 100%;
   @media @desktop{width: 407px;}
   @media @desktopXL{width: 475px;}
-
 }
