new content and menu update

--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -49,7 +49,7 @@ block content
 
 	//- аксессуары
 	.section-accessories
-		include ../sections/section-accessories.pug
+		include ../sections/accessories.pug
 
 	//- Подвал
 	.footer
