--- a/src/less/base/_base.less
+++ b/src/less/base/_base.less
@@ -159,6 +159,10 @@ blockquote p {
 	border-bottom: 1px solid #e9eff3;
 }
 
+.font-size-null {
+	font-size: 0px;
+}
+
 
 /***style for sticky-footer***/
 
