--- a/src/less/blocks/_filter.less
+++ b/src/less/blocks/_filter.less
@@ -45,6 +45,13 @@
 
 	@media @desktop {
 		display: block;
+	}
+
+	a {
+		text-decoration: none;
+		&:hover {
+			color:@text-red;
+		}
 	}	
 }
 
@@ -137,7 +144,7 @@
 .label-color-checkbox {
 	font-size: 0px;
 	margin-right: 8px;
-	margin-bottom: 0px;
+	margin-bottom: 8px;
 
 	&:last-child {
 		margin-right: 0;
