change sales-hits for main-page

--- a/src/pug/pages/ui/sales_hits.pug
+++ b/src/pug/pages/ui/sales_hits.pug
@@ -13,19 +13,19 @@ block content
 			.sales-hits-wrapper
 				.row
 					.col-6.col-md-3
-						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.', '6 990 р.' )
+						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
 							+button-cart('В корзину','#')
 					
 					.col-6.col-md-3.order-lg-4
-						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.', '6 990 р.' )
+						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
 							+button-cart('В корзину','#')
 					
 					.col-6.col-md-3.order-md-4.order-lg-3
-						+card( 'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', 'Сумка большая, коллекция "Рига"', '1 990 р.')
+						+card( 'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', '#', 'Сумка большая, коллекция "Рига"', '1 990р.')
 							+button-store('Нет в наличии','#')
 							+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
 
 					.col-6.col-md-3.order-md-3.order-lg-2
-						+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 893 р.')
+						+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#', 'Сумка большая, коллекция "Рига"', '4 893р.')
 							+button-cart('В корзину','#')
 							+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
