--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -66,14 +66,15 @@
 	transition: color 0.5s;
 	@media @tablet {
 		padding-left: 10px;
-	padding-right: 10px;
+		padding-right: 10px;
 		margin-bottom: 16px;
 		min-height: 75px;
 	}
-
-	@media @desktop {
+	@media (min-width: 730px){
 		padding-left: 16px;
 		padding-right: 16px;
+	}
+	@media @desktop {		
 		font-size: 16px;
 		line-height: 18px;					
 	}
