accessories link added

--- a/src/pug/sections/section-accessories.pug
+++ b/src/pug/sections/section-accessories.pug
@@ -1,5 +1,5 @@
 .container
-	.title-3 Посмотреть все аксессуары
+	a.title-3.title--link(href="#") Посмотреть все аксессуары
 	.row.d-flex.d-md-none.d-xl-flex
 		.col-md-6.col-xl-4
 			+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
