--- a/src/less/blocks/_titles.less
+++ b/src/less/blocks/_titles.less
@@ -66,9 +66,10 @@ a.title-1, a.title-2, a.title-3, a.title-4, a.title-5, a.title-6, a.title,
 	
 	text-decoration: none;
 }
-a.title-1--link:hover {
+a.title--link:hover {
 	color: @text-red;
 }
-a.title-1--link{	
+
+a.title--link{	
 	display: block;	
 }
