links hover update

--- a/src/less/blocks/_titles.less
+++ b/src/less/blocks/_titles.less
@@ -66,10 +66,15 @@ a.title-1, a.title-2, a.title-3, a.title-4, a.title-5, a.title-6, a.title,
 	
 	text-decoration: none;
 }
-a.title--link:hover {
-	color: @text-red;
-}
 
 a.title--link{	
 	display: block;	
+
+	&:hover {
+		color: @text-red;		
+	}
+}
+
+a:hover {
+	color: @text-red;		
 }
