added ui-kit input field

--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -5,6 +5,8 @@
 /* base color */
 @black: #000;
 @active-checkbox: #58595B;
+@success: #86A138;
+@error: #DC1019;
 
 //color for line-gradient
 @color-1: #019795;
