--- a/src/less/sections/_footer-subscribe.less
+++ b/src/less/sections/_footer-subscribe.less
@@ -70,13 +70,15 @@
 .footer-subscribe--input {
 	transition: 0.2s ease-in;
 }
+.footer-subscribe-wrapper {
+	display: flex;
+}
 @media @tablet {
 	.footer-subscribe-wrapper {
 		width: 100%;
 	}
 	.footer-subscribe--input {
 		width: 70%;
-		
 	}
 }
 .footer-subscribe--subtitle {
