--- a/src/pug/pages/ui/forms.pug
+++ b/src/pug/pages/ui/forms.pug
@@ -8,6 +8,12 @@ block content
 	.container.container--left
 		
 		.title Элементы формы
-
+		
 		.section-ui
-		title Элементы формы
+		p Input с текстом
+		.input-wrapper
+			.input-field--success-icon
+			.input-field--error-icon
+			input.input-field(type="text")
+			span.input-field__label Email
+			.input-field__error-text Пожалуйста, введите действительный адрес электронной почты
