--- a/src/less/base/_base.less
+++ b/src/less/base/_base.less
@@ -156,9 +156,14 @@ blockquote p {
 }
 
 .hr-line {
-	border-bottom: 1px solid #e9eff3;
+	// border-bottom: 1px solid #e9eff3;
+	border-top: 1px solid #C4C4C4;
+	
 }
 
+.wrapper-relative {
+	position:relative;
+}
 
 /***style for sticky-footer***/
 
