--- a/src/less/sections/_header-search.less
+++ b/src/less/sections/_header-search.less
@@ -1,14 +1,12 @@
 .header-search-section {
 	display: none;
 	position: relative;
-	z-index: 100;
-
 }
 .header-search {
 	position: absolute;
 	width: 100%;
 	box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.3);
-	z-index: 110;
+	z-index: 100;
 
 }
 .header-search__input {
@@ -23,9 +21,9 @@
 }
 .header-search__close {
 	position: absolute;
+	z-index: 200;
 	top: 12px;
-	left: 100%;
-	margin-left: -34px;
+	right:22px; // Отступ как паддинги у input, чтобы симметрично поставить
 	cursor: pointer;
 }
 .header-search__result {
@@ -41,7 +39,7 @@
 	// position:absolute;
 	// top:56px; // высота Input блока - строки поиска
 	border-top: 1px solid #C4C4C4;
-	box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.4);
+	// box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.4);
 	padding-bottom: 22px;
 	padding-top: 17px;
 	background-color: @white;
@@ -101,7 +99,7 @@
 	// top:56px; // высота Input блока - строки поиска
 	display: none;
 	border-top: 1px solid #C4C4C4;
-	box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.3);
+	// box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.3);
 	padding-top: 16px;
 	padding-bottom: 22px;
 	padding-left: 40px;
@@ -142,11 +140,3 @@
 	}
 }
 
-// .header-search-result-mobile {
-// 	display: none;
-// }
-// @media @mobile {
-// 	.header-search-result-desktop {
-// 		display: none;
-// 	}
-// }
