--- a/src/pug/sections/header-search.pug
+++ b/src/pug/sections/header-search.pug
@@ -1,7 +1,7 @@
 //- шапка поиск
-.container
-	.header-search-section#header-search-section
-		.header-search
+.header-search-section#header-search-section
+	.header-search
+		.container.wrapper-relative
 			input.header-search__input(type="text" placeholder="Поиск товара...")
 			.header-search__close
 				<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
