fixed fontsize and shadow

--- a/src/pug/mixins/_mixins.pug
+++ b/src/pug/mixins/_mixins.pug
@@ -34,8 +34,8 @@ mixin checkbox (text)
 		span.checkbox-custom
 		p.checkbox-label-text= text
 
-mixin checkboxSmall (text)
+mixin checkboxFilter (text)
 	label.checkbox-label
 		input.checkbox(type="checkbox")
-		span.checkbox-custom.checkbox-custom--small
-		p.checkbox-label-text.checkbox-label-text--small= text
+		span.checkbox-custom.checkbox-custom--filter
+		p.checkbox-label-text.checkbox-label-text--filter= text
