--- a/src/pug/pages/ui/forms.pug
+++ b/src/pug/pages/ui/forms.pug
@@ -10,12 +10,10 @@ block content
 		.title Элементы формы
 
 		.section-ui
-			label.checkbox-label
-				+checkbox('Текст lable checkbox')
+			+checkbox('Текст lable checkbox')
 			pre.
 				+checkbox('Текст lable checkbox')
 		.section-ui
-			label.checkbox-label--small
-				+checkboxSmall('Текст lable checkbox фильтры')
+			+checkboxFilter('Текст lable checkbox фильтры')
 			pre.
-				+checkboxSmall('Текст lable checkbox фильтры')
+				+checkboxFilter('Текст lable checkbox фильтры')
