--- a/src/less/blocks/_forms.less
+++ b/src/less/blocks/_forms.less
@@ -7,27 +7,29 @@
 	width: 16px;
 	height: 16px;
 	border: 1px solid @gray;
-	&--small {
+	&--filter {
 		width: 12px;
 		height: 12px;
+	}
+}
+.checkbox-label {
+	width: 100%;
+	position: relative;
+	padding-top: 8px;
+	&-text {
+		display: inline-block;
+		padding-left: 11px;
+		font-size: 12px;
+		color: @active-checkbox;
+		vertical-align: top;
+	}
+	@media @desktop {
+		padding-top: 3px;
 	}
 }
 .checkbox-custom,
 .checkbox-label {
 	display: inline-block;
-	vertical-align: top;
-}
-@media @tablet {
-	.checkbox-custom,
-	.checkbox-label {
-		vertical-align: middle;
-	}
-}
-@media @desktop {
-	.checkbox-custom,
-	.checkbox-label {
-		vertical-align: middle;
-	}
 }
 .checkbox:checked + .checkbox-custom::before {
 	content: url('../../img/icons/checkbox.svg');
@@ -36,52 +38,44 @@
 	top: -5px;
     left: 2px;
 }
-.checkbox:checked + .checkbox-custom--small::before {
+.checkbox:checked + .checkbox-custom--filter::before {
 	content: url('../../img/icons/checkbox-small.svg');
 	display: block;
 	position: absolute;
 	top: -8px;
 	left: 1px;
 }
-.checkbox-label {
-	position: relative;
-	padding-top: 8px;
-	&-text {
-		display: inline-block;
-		padding-left: 11px;
-		font-size: 12px;
-		color: @active-checkbox;
+.checkbox-label-text {
+	font-size: 12px;
+	width: 50%;
+	@media @tablet {
+		font-size: 14px;
 	}
 }
-@media @desktop {
-	.checkbox-label {
-			padding-top: 3px;
-	}
+.checkbox-label-text--filter {
+	font-size: 16px;
+	width: 100%;
 }
 .checkbox:focus + .checkbox-custom,
 .checkbox.has-focus + .checkbox-custom {
-	box-shadow: 0 0 8px 3px @gray;
+	box-shadow: 0 0 15px 0 @gray;
 }
 .checkbox:checked + .checkbox-custom {
 	border: 1px solid @active-checkbox;
 }
-.checkbox:checked ~ .checkbox-label-text--small {
+.checkbox:checked ~ .checkbox-label-text--filter {
 	color: @active-checkbox;
 }
 .checkbox-label-text {
-	width: 50%;
-	&--small {
+	width: 90%;
+	&--filter {
 		color: @gray;
+	}
+	@media @tablet {
+		width: 90%;
+	}
+	@media @desktop {
+		width: 90%;
 	}
 }
 
-@media @tablet {
-	.checkbox-label-text {
-		width: auto;
-	}
-}
-@media @desktop {
-	.checkbox-label-text {
-		width: auto;
-	}
-}
