added some badges

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -19,6 +19,8 @@
 @import "blocks/_sections.less";
 @import "blocks/_banner.less";
 @import "blocks/_catalogue-pagination.less";
+@import "blocks/_badges.less";
+
 
 // Sections
 @import "sections/_ui-nav-panel"; // Left panel in documentation
