--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -33,6 +33,8 @@
 			+linkLeftPanel("Карточка раздела", "section-card.html")
 			+linkLeftPanel("Социальные сети", "ui-social.html")
 			+linkLeftPanel("Каталог пагинация", "catalogue-pagination.html")
+			+linkLeftPanel("Бейдж", "badges.html")
+
 
 
 	.left-panel__section
